deploy/app/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopware
  labels:
    name: shopware
