deploy/app/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: shop
    app.kubernetes.io/instance: shopware
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: shopware
    app.kubernetes.io/part-of: shopware
    app.kubernetes.io/version: 0.2.0
  name: shopware
  namespace: shopware
spec:
  # replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: shop
      app.kubernetes.io/instance: shopware
      app.kubernetes.io/name: shopware
  template:
    metadata:
      labels:
        app.kubernetes.io/component: shop
        app.kubernetes.io/instance: shopware
        app.kubernetes.io/managed-by: Kustomize
        app.kubernetes.io/name: shopware
        app.kubernetes.io/part-of: shopware
        app.kubernetes.io/version: 0.2.0
    spec:
      serviceAccountName: shopware
      terminationGracePeriodSeconds: 400
      containers:
        - name: shopware
          image: ghcr.io/fmjstudios/shopware:0.2.0-nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
