deploy/app/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopware
  namespace: shopware
  annotations:
    cert-manager.io/cluster-issuer: zerossl-staging-issuer
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopware
                port:
                  name: http
                  number: 9000
